<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version">2.4.0</string>

    <string name="app_name">旅行派</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_hint">请输入手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="please_input_city_name">请输入城市名</string>
    <string name="contact_us">联系我们</string>
    <string name="website">网站: http://www.lvxingpai.com</string>
    <string name="weibo">微博: 旅行派</string>
    <string name="weixin">微信: 旅行派</string>
    <string name="email">邮箱: services@lvxingpai.cn</string>
    <string name="tel">QQ群: 45742544</string>
    <string name="company_name">北京雪见科技有限公司\n版权所有</string>
    <string name="version">version</string>

    <string name="tool_title">旅行派</string>

    <string name="request_network_failed">小主，您的网络好像有问题哦~</string>
    <string name="request_server_failed">请求失败</string>

    <string name="empty_string">empty</string>
    <string name="retry">Retry</string>


    <string name="baidu">baidu</string>
    <string name="android_market">androidMarket</string>
    <string name="city_detail_info">简介</string>
    <string name="city_detail_notice">指南</string>
    <string name="city_detail_traffic">交通</string>
    <string name="city_detail_viewspot">景点</string>
    <string name="city_detail_plan">行程</string>
    <string name="city_detail_note">游记</string>
    <string name="city_detail_food">美食</string>
    <string name="city_detail_shopping">购物</string>
    <string name="city_detail_goods">当地玩乐</string>
    <string name="order_input">订单填写</string>
    <string name="add_member">添加旅客</string>
    <string name="choice_date">选择日期</string>
    <string name="common_user_info">常用旅客信息</string>
    <string name="confirm">确定</string>
    <string name="edit_user_info">编辑旅客信息</string>
    <string name="save_info">保存</string>
    <string name="my_order_list">我的订单</string>
    <string name="order_detail">订单详情</string>
    <string name="goods_name">商品名称:</string>
    <string name="order_id">订单编号:</string>
    <string name="package_type">套餐类型:</string>
    <string name="consumption_time">出行日期:</string>
    <string name="reserve_count">购买数量:</string>
    <string name="order_price">订单金额:</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_it_now">立即支付</string>
    <string name="submit_order">提交订单</string>
    <string name="user_info">旅客信息</string>
    <string name="payment">付款方式</string>
    <string name="choose_payment">选择支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="weixin_pay">微信支付</string>
    <string name="apply_for_drawback">申请退款</string>
    <string name="reason_for_drawback">退款原因</string>
    <string name="leave_message">留言</string>
    <string name="submit_apply">提交申请</string>
    <string name="departure_date">出行日期</string>
    <string name="select_date">选择日期</string>
    <string name="edit">编辑</string>
    <string name="add_user_info">添加旅客信息</string>
    <string name="select__contact">选择旅客为联系人</string>
    <string name="goods_detail">商品详情</string>
    <string name="choise_country">选择国家/地区</string>
    <string name="add">添加</string>
    <string name="talk_to_seller">联系卖家</string>
    <string name="order_confirm">订单确认</string>
    <string name="next_step">下一步</string>
    <string name="pay_now">立即预定</string>
    <string name="to_store">进入店铺</string>
    <string name="talk_to_busness">联系商家</string>
    <string name="commodity_desc">商品介绍</string>
    <string name="commodity_notice">购买须知</string>
    <string name="commodity_book">预定及退改</string>
    <string name="commodity_traffic">交通提示</string>
    <string name="title_activity_store_detail_activity_v2">StoreDetailActivityV2</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
