<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.aizou.peachtravel.common.widget.TitleHeaderBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/base_text_color_title"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:text="@string/contact_us"
            android:textColor="@color/base_text_color_title"
            android:textSize="18sp" />
        
        <View android:layout_width="106dp"
            android:layout_height="1dp"
            android:background="#dbdbdb"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:text="@string/website"
            android:textColor="@color/base_text_color_subtitle"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:text="@string/weibo"
            android:textColor="@color/base_text_color_subtitle"
            android:textSize="15sp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:text="@string/weixin"
            android:textColor="@color/base_text_color_subtitle"
            android:textSize="15sp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:text="@string/email"
            android:textColor="#737373"
            android:textSize="15sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:text="@string/tel"
            android:textColor="@color/base_text_color_subtitle"
            android:textSize="15sp"
             />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/company_name"
        android:gravity="center"
        android:textColor="#737373"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/version"
        android:textColor="#737373"
        android:textSize="15sp" />

</LinearLayout>