<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/base_color_white">

            <TextView
                android:id="@+id/tv_title_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/selector_ic_nav_back"
                android:paddingLeft="10dp"
                android:paddingRight="30dp" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/payment"
                android:textColor="@color/color_text_ii"
                android:textSize="18sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/choose_payment"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />
        <CheckedTextView
            android:id="@+id/ctv_alipay"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/base_color_white"
            android:drawableRight="@drawable/checker_for_checkbox"
            android:drawableLeft="@drawable/icon_alipay"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/alipay"
            android:textColor="@color/color_text_ii"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />
        <CheckedTextView
            android:id="@+id/ctv_weixin"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/base_color_white"
            android:drawableRight="@drawable/checker_for_checkbox"
            android:drawableLeft="@drawable/icon_weixinpay"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/weixin_pay"
            android:textColor="@color/color_text_ii"
            android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentTop="true"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:padding="7dp"
            android:textColor="@color/color_text_iii"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/pay_bg"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/pay_it_now"
            android:textColor="@color/base_color_white"
            android:textSize="13sp" />
    </RelativeLayout>
</merge>