<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent_color">

    <LinearLayout
        android:id="@+id/ll_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_color_white"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <FrameLayout
                android:id="@+id/btn_travel_notice"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_travel_notice"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_notice"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_traffic"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_traffic"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_traffic"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_viewspot"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_viewspot"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_viewspot"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <FrameLayout
                android:id="@+id/btn_note"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_note"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_note"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_food"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_food"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_food"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_shopping"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:src="@drawable/icon_shopping"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/city_detail_shopping"
                    android:textColor="@color/color_text_ii"
                    android:textSize="11sp"/>

            </FrameLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>