<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="62dp"
        android:background="@color/base_color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@color/tab_bar_color">

                <TextView
                    android:id="@+id/tv_title_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/icon_arrow_left_white"
                    android:paddingLeft="10dp"
                    android:paddingRight="30dp" />

                <TextView
                    android:id="@+id/strategy_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/apply_for_drawback"
                    android:textColor="@color/base_color_white"
                    android:textSize="18sp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_line" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/reason_for_drawback"
                android:textColor="@color/color_text_ii"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/lv_reason"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0px" />

            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/leave_message"
                android:textColor="@color/color_text_ii"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_memo"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="7"
                android:hint="说点什么吧......."
                android:textColorHint="@color/color_text_v"
                android:background="@drawable/bg_common"
                android:gravity="left|top"
                android:paddingTop="3dp"
                android:paddingLeft="7dp"
                android:textColor="@color/color_text_ii"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_gravity="bottom"
        android:background="@color/app_theme_color"
        android:gravity="center"
        android:text="@string/submit_apply"
        android:textColor="@color/base_color_white"
        android:textSize="18sp" />

</merge>
