<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_color_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:textColor="@color/color_text_ii"
            android:paddingLeft="10dp"
            android:text="@string/choose_payment"
            android:textSize="15sp" />

         <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <CheckedTextView
            android:id="@+id/ctv_alipay"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/base_color_white"
            android:drawableLeft="@drawable/icon_alipay"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_arrow_right_white"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/alipay"
            android:textColor="@color/color_text_ii"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <CheckedTextView
            android:id="@+id/ctv_weixin"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/base_color_white"
            android:drawableLeft="@drawable/icon_weixinpay"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/icon_arrow_right_white"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/weixin_pay"
            android:textColor="@color/color_text_ii"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_line" />

        <Button
            android:id="@+id/iv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_common"
            android:text="取消"
            android:textColor="@color/app_theme_color"
            android:textSize="17sp" />

    </LinearLayout>

</FrameLayout>
